<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">androidBasic</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="phone">电话</string>
    <string name="from_camera">用相机拍照</string>
    <string name="from_gallery">从图库选择</string>
    <string name="cannot_use_system">无法调用系统</string>
    <string name="gallery">图库</string>
    <string name="camera">相机</string>
    <string name="fast_switch">快速切换</string>
    <string name="server_config">服务器配置</string>
    <string name="server_online">已选正式服务器</string>
    <string name="server_offline">已选测试服务器</string>
    <string name="server_custom">已选自定义服务器</string>
    <string name="app_crash">不小心晕了一下下，重新唤醒它吧</string>
    <string name="restart">重新唤醒</string>
    <string name="withhold">暂不</string>
    <string name="update_later">暂不升级</string>
    <string name="update_now">立即升级</string>
    <string name="week1">星期一</string>
    <string name="week2">星期二</string>
    <string name="week3">星期三</string>
    <string name="week4">星期四</string>
    <string name="week5">星期五</string>
    <string name="week6">星期六</string>
    <string name="week7">星期天</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="man">男</string>
    <string name="women">女</string>
    <string name="no_data">暂无数据</string>
    <string name="copy_done">已复制到剪贴板</string>
    <string name="fail_read_contacts">本机不支持读取联系人</string>
    <string name="load_fail">加载失败</string>
    <string name="load_fail_this">页面加载失败</string>
    <string name="load_success">加载成功</string>
    <string name="loading_wait">加载中，请稍候…</string>
    <string name="pull_down_refresh">下拉刷新</string>
    <string name="release_refresh">松手刷新</string>
    <string name="refreshing_wait">刷新中，请稍候…</string>
    <string name="refresh_success">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="perda_photo_local">相册选取</string>
    <string name="perda_photo_camera">拍照</string>
    <string name="colon">：</string>
    <string name="retry">刷新试试</string>
    <string name="network_unstable_pls_check">网络连接不稳定，请检查网络设置</string>
    <string name="network_unavailable_pls_check">网络连接不可用，请检查网络设置</string>
    <string name="auth_failure">未通过认证，请求不合法</string>
    <string name="server_anomaly_try_later">服务器开了会小差，请稍候再试</string>
    <string name="parse_failure_try_later">更新版本，或稍候再试</string>
    <string name="response_check_anomaly_try_later">数据异常，更新版本试试</string>
    <string name="network_anomaly_try_later">网络异常，请稍候再试</string>
    <string name="request_anomaly_try_later">请求异常，请稍候再试</string>
    <string name="not_get_whole_content">未获取完整内容</string>
    <string name="data_missing">数据缺失</string>
    <string name="camera_light_open">打开</string>
    <string name="camera_light_close">关闭</string>
    <string name="camera_desc">将身份证置于虚线框内，确保文字清晰</string>
    <string name="camera_front_title">拍摄身份证人像面</string>
    <string name="camera_back_title">拍摄身份证国徽面</string>
    <string name="camera_open_error">有其他程序在使用相机或闪光灯或有其他故障</string>
    <string name="use_picture">使用照片</string>
    <string name="camera_again">重拍</string>
    <string name="current_null">暂无</string>
</resources>
