<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <SurfaceView
                android:id="@+id/surfaceView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </FrameLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000">

            <TextView
                    android:id="@+id/tv_camera_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_smaller"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:tag="1"
                    android:textSize="@dimen/size_small"
                    android:drawablePadding="@dimen/spacing_smaller"
                    android:drawableLeft="@drawable/ic_camera_light_on"
                    android:layout_centerVertical="true"
                    android:text="@string/camera_light_open"/>

        </RelativeLayout>
        <LinearLayout
                android:id="@+id/ll_title"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:background="#99000000">
            <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/size_bigger"
                    android:textColor="@color/base"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/spacing_big"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_desc"
                    android:textSize="@dimen/size_big"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/spacing_smaller"
                    android:textColor="@color/white"/>


        </LinearLayout>

        <len.android.basic.view.CameraLayerView
                android:id="@+id/camera_layer_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        <RelativeLayout
                android:id="@+id/home_camera_bottom_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000"
                android:layout_alignParentBottom="true">

            <ImageView
                    android:id="@+id/img_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_bigger"
                    android:layout_centerInParent="true"
                    android:src="@drawable/bg_camera_take_pic"/>
            <TextView
                    android:id="@+id/tv_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_biggest"
                    android:textSize="@dimen/size_big"
                    android:textColor="@color/white"
                    android:layout_centerVertical="true"
                    android:text="@string/cancel"/>

            <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_biggest"
                    android:textSize="@dimen/size_big"
                    android:textColor="@color/white"
                    android:visibility="gone"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/use_picture"/>

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>

